@@ -390,8 +390,18 @@ namespace Rcpp {
             return s.get_sexp() ;    
         }
         
+	    template <int RTYPE>
+	    template <typename T>
+        string_proxy<RTYPE>& string_proxy<RTYPE>::operator+=(const T& rhs) {
+        	String tmp = get() ;
+        	tmp += rhs ;
+        	set( tmp ) ;
+        	return *this ;
+        }
+		
 	}
     
+	
 	template <>
     inline SEXP wrap<Rcpp::String>( const Rcpp::String& object) {
     	RCPP_STRING_DEBUG( "wrap<String>()" ) ;
